  related utilities.

* Added the ``websupport`` library.

* Added a Texinfo builder.

* #460: Allow limiting the depth of section numbers for HTML.

* #138: Add an ``index`` role, to make inline index entries.

* #443: Allow referencing external graphviz files.

* #221: Add Swedish locale.

* Added ``inline`` option to graphviz directives, and fixed the
  default (block-style) in LaTeX output.


Release 1.0.4 (Sep 17, 2010)
============================

* #544: Allow ``.pyw`` as a source file extension.

* #524: Open intersphinx inventories in binary mode on Windows,
  since version 2 contains zlib-compressed data.

* #513: Allow giving non-local URIs for JavaScript files, e.g.
  in the JSMath extension.

* #512: Fix traceback when ``intersphinx_mapping`` is empty.


Release 1.0.3 (Aug 23, 2010)
============================

* #495: Fix internal vs. external link distinction for links coming
  from a docutils table-of-contents.

* #494: Fix the ``maxdepth`` option for the ``toctree()`` template
  callable when used with ``collapse=True``.

* #507: Fix crash parsing Python argument lists containing brackets
  in string literals.

* #501: Fix regression when building LaTeX docs with figures that
  don't have captions.

* #510: Fix inheritance diagrams for classes that are not picklable.

* #497: Introduce separate background color for the sidebar collapse
  button, making it easier to see.

* #502, #503, #496: Fix small layout bugs in several builtin themes.


Release 1.0.2 (Aug 14, 2010)
============================

* #490: Fix cross-references to objects of types added by the
  :func:`~.Sphinx.add_object_type` API function.

* Fix handling of doc field types for different directive types.

* Allow breaking long signatures, continuing with backlash-escaped
  newlines.

* Fix unwanted styling of C domain references (because of a namespace
  clash with Pygments styles).

* Allow references to PEPs and RFCs with explicit anchors.
